# plugin-sdk-example

./: CMakeLists.txt  LICENSE
src/: main.cpp
